2022-07-27.Implementing-Application-Level-security-with-Calico/01_frontend-allow.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: frontend-allow
spec:
  order: 10
  selector: app == 'frontend'
  ingress:
   - action: Allow
     http:
       paths:
         - exact: "/"
         - prefix: "/static"
