2022-07-27.Implementing-Application-Level-security-with-Calico/02_frontend-deny.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: frontend-deny
spec:
  order: 20
  selector: app == 'frontend'
  types:
  - Ingress
